--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "delta-spark (==2.4.0)",
     "boto3 (>=1.40.30,<2.0.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
+    "streamlit (==1.26.0)"
 ]
 
 
