Ajustes .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,20 @@
 # Definições de ambiente
-LOG_DIR = ./log
-LOG_FILE = log.txt
-RAW_DIR = ./data/raw
-RAW_FILE = dados_brutos.parquet
+LOG_DIR=./log
+LOG_FILE=log.txt
+RAW_DIR=./data/raw
+RAW_FILE=dados_brutos.parquet
 
 # Informações para API
-LINK_API = "https://api-dados-abertos.cearatransparente.ce.gov.br/transparencia/servidores/salarios"
-ANO_API = 2025
-MES_API = 6
-PAGINA_INI = 1
+LINK_API=https://api-dados-abertos.cearatransparente.ce.gov.br/transparencia/servidores/salarios
+ANO_API=2025
+MES_API=6
+PAGINA_INI=1
 
 # Destinos folders AWS S3
-LANDINGZONE_DIR = landingzone
-BRONZE_DIR = bronze
-SILVER_DIR = silver
-GOLD_DIR = gold
+LANDINGZONE_DIR=landingzone
+BRONZE_DIR=bronze
+SILVER_DIR=silver
+GOLD_DIR=gold
 
 # Credenciais AWS
 AWS_ACCESS_KEY_ID=CHAVEACESSOAWS
